<resources>
    <string name="app_name">KotlinMvvm</string>

    <string name="offers">Offers</string>
    <string name="details">Details</string>
    <string name="fit_well_ness">Fitness And Wellness</string>

    <string name="des_string">Description</string>

    <string name="map">Map</string>
    <string name="call">Call</string>
    <string name="menu">Menu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edt_hint_search">Movies, tv shows and persons</string>
    <string name="search">Search</string>
    <string name="in_theaters">In Theaters</string>
    <string name="see_all">SEE ALL</string>
    <string name="tv_on_air">On TV</string>

    <string name="failed_again">Something is not right, try again.</string>
    <string name="user_score">User Score</string>
    <string name="status">Status:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="seasons">"Seasons: "</string>
    <string name="episodes">Episodes:</string>
    <string name="overview">Overview:</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="more_similar">More similar</string>
    <string name="homepage">Homepage:</string>
    <string name="billed_cast">Billed Cast</string>


    <string-array name="shopping_item">
        <item>Onion</item>
        <item>Sausage</item>
        <item>Milk</item>
        <item>Garlic</item>
        <item>Beef</item>
        <item>Veggies</item>
        <item>Olive</item>
        <item>Cheese</item>
        <item>Tuna</item>
        <item>Mushrooms</item>
    </string-array>


</resources>
