<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryMedium"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activities.main.MainActivity"
        tools:showIn="@layout/fragment_details_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_cast_bottom"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardElevation="5dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_people_green_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent"
                            android:text="@string/billed_cast"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/list_cast_bottom"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_images_bottom"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:id="@+id/img"
                            android:src="@drawable/ic_panorama_green_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/img"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent"
                            android:text="@string/images"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/see_all"
                            android:clickable="true"
                            android:layout_marginEnd="5dp"
                            android:focusable="true"
                            android:id="@+id/btn_see_all_images"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/list_images_bottom"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_trailer_bottom"
                android:visibility="gone"
                app:cardElevation="5dp"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_trailers"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent"
                            android:text="@string/videos"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/list_trailers_bottom"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_reviews_bottom"
                android:visibility="gone"
                app:cardElevation="5dp"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent"
                            android:text="Reviews"/>

                    </LinearLayout>

                    <androidx.viewpager.widget.ViewPager
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/pager_reviews"/>

                    <com.chahinem.pageindicator.PageIndicator
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:elevation="5dp"
                        app:piDotSpacing="4dp"
                        app:layout_collapseMode="parallax"
                        app:piDefaultColor="@color/colorWhite"
                        app:piSelectedColor="@color/colorAccent"
                        android:layout_gravity="center"
                        android:id="@+id/pageindicator_review"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_similar_bottom"
                android:visibility="gone"
                app:cardCornerRadius="3dp"
                app:cardElevation="15dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            style="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorAccent"
                            android:text="@string/more_similar"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/list_similar_bottom"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="15dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>